// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component is rendered correctly with no props 1`] = `
<div
  className=""
>
  <input
    id="searchText"
    placeholder="Type here to search"
    type="text"
  />
  <button
    className=""
    onClick={[Function]}
  >
    Search
  </button>
</div>
`;

exports[`Search component is rendered correctly with test props 1`] = `
<div
  className="sampleClass"
>
  <input
    id="searchText"
    placeholder="Sample PlaceHolder"
    type="text"
  />
  <button
    className=""
    onClick={[Function]}
  >
    Sample Title
  </button>
</div>
`;
